[gd_scene load_steps=3 format=3 uid="uid://b4qf0wkmg61jx"]

[ext_resource type="Script" path="res://menus/menu.gd" id="1_miyhn"]
[ext_resource type="Theme" uid="uid://vjje68o054kl" path="res://menus/button.tres" id="2_qwkbd"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchor_right = 1.389
anchor_bottom = 1.389
offset_right = -622.4
offset_bottom = -350.1
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_miyhn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = -378.0
offset_right = 713.0
offset_bottom = -136.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_qwkbd")
theme_type_variation = &"FlatButton"
text = "Start"
flat = true
alignment = 0

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_qwkbd")
text = "Options"
flat = true
alignment = 0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_qwkbd")
text = "Quit"
flat = true
alignment = 0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
